fix: z-index in bubble tea page, tail of bubble chat

--- a/ex1-bubble-tea-shop/style.css
+++ b/ex1-bubble-tea-shop/style.css
@@ -23,6 +23,7 @@ body {
   font-size: 24px;
   font-weight: 500;
   bottom: 0px;
+  z-index: 2;
 }
 .location {
   position: absolute;
@@ -36,8 +37,18 @@ body {
   background-color: rgb(149, 148, 148);
   right: 0px;
   top: 25px;
+  z-index: 2;
 }
 
 .shop-image {
-  filter: brightness(70%);
+  position: relative;
+  z-index: 0;
+}
+.shadow-box {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+  background: linear-gradient(black 5%, transparent);
+  rotate: 180deg;
 }
