--- a/ex2-techup-chatroom/style.css
+++ b/ex2-techup-chatroom/style.css
@@ -83,3 +83,14 @@ header {
   align-items: center;
   margin-bottom: 10px;
 }
+
+.tail-chat {
+  width: 20px;
+  height: 20px;
+  border-radius: 20px;
+  position: absolute;
+  right: -1px;
+  top: 0px;
+  box-shadow: inset 4px 5px 0px 2px #00b900;
+  transform: rotate(180deg);
+}
